--- a/styles/products.module.css
+++ b/styles/products.module.css
@@ -81,6 +81,7 @@
 
 .offers_offer{
     width: max-content;
+    max-width: 100%;
 }
 .product_offer_menu{
 
@@ -105,6 +106,7 @@
 }
 .ul_sub_menu li p{
     width: max-content;
+    max-width: 100%;
     padding: 6px 20px;
     user-select: none;
     cursor: pointer;
