--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -128,6 +128,7 @@
     cursor: pointer;
     color: #19191998;
     width: max-content;
+    max-width: 100%;
 
 
 }
@@ -255,6 +256,7 @@
     cursor: pointer;
     color: #19191998;
     width: max-content;
+    max-width: 100%;
 
 
 }
