--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -126,7 +126,6 @@ background: #ffffff;
 
 
 .content_wrapper{
-    margin-top: 80px;
     position: relative;
     width: 100%;
 
@@ -160,7 +159,7 @@ background: #ffffff;
     box-sizing: border-box;
     padding-left: 22px;
     padding-right: 22px;
-    max-width: 1276px;
+    max-width: 79.75rem;
     display: flex;
     margin: 0 auto;
     justify-content: center;
@@ -180,8 +179,12 @@ background: #ffffff;
 }
 .paragraph{
     text-align: center;
-    margin-bottom: 58px;
-    line-height: 25px;
+    line-height: 1.3em;
+}
+.paragraph h2{
+    max-width:80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .dc{
     display: flex;
@@ -621,7 +624,7 @@ text-align: center;
     position: relative;
     line-height: 0;
     margin-bottom: 15px;
-    max-width: 585px;
+    max-width: 36.56em;
 }
 .feature_title::before{
     content: "";
@@ -1053,7 +1056,12 @@ text-align: center;
     text-align: center;
 
     padding:0;
-    margin:0 auto;
+    margin:30px auto;
+}
+@media(max-width: 600px){
+    .subsection_title{
+        font-size: 2.6em;
+    }
 }
 .subsection_description{
     position: relative;
@@ -1088,8 +1096,9 @@ text-align: center;
 }
 .video_wrapper{
     position: relative;
-    width: 1232px;
-    height:398px;
+    max-width: 1232px;
+/*    height:693px;*/
+    margin:80px auto;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -1097,18 +1106,15 @@ text-align: center;
 }
 .v_r_a_content_inner{
     position:relative;
-    margin-left: auto;
-    margin-right: auto;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    padding-left: 22px;
-    padding-right: 22px;
+    padding: 3em 1.2em;
     max-width: 100vw;
     display: flex;
     margin: 0 auto;
     justify-content: center;
     flex-direction: column;
-    height: 800px;
+
     overflow: hidden;
 }
 .video_resolution_aspect_wrapper{
@@ -1116,8 +1122,19 @@ text-align: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 80px;
+    grid-row-gap: 80px;
     margin: 0 auto;
     overflow: hidden;
+}
+@media(max-width: 998px){
+    .video_resolution_aspect_wrapper{
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 80px;
+        margin: 0 auto;
+        overflow: hidden;
+    }
 }
 .v_r_a_title{
     position: relative;
@@ -1126,8 +1143,9 @@ text-align: center;
     letter-spacing: 1.2px;
     z-index: 2;
     margin-top: -20px;
-    margin-bottom: 60px;
+    margin-bottom: 5rem;
 }
+
 .v_r_a_video_background{
     position: absolute;
     top:-80px;
@@ -1152,20 +1170,21 @@ text-align: center;
 
 }
 .v_r_a_card_inner_title h4{
-    font-size: 39px;
+    font-size: 2.4rem;
     font-weight: 100;
     text-align: center;
     margin: 20px auto;
 
 }
 .v_r_a_card_inner_description{
-    padding: 12px 58px;
     text-align: center;
+    padding: 0 2em;
+    max-width:21rem;
 
 }
 .v_r_a_card_inner_description_text{
     font-weight: 100;
-    font-size: 18px;
+    font-size: 1.15em;
     text-align: center;
     line-height: 1.3286;
 
@@ -1244,10 +1263,38 @@ text-align: center;
     line-height: 1.9;
     letter-spacing: 0.001rem;
     width:1015px;
-    max-width:1015px;
-    min-width:1015px;
+   /* max-width:1015px;
+    min-width:1015px;*/
     text-align: justify;
     margin: 0 auto;
+}
+.big_text{
+    font-size:60px;
+    line-height: 1;
+}
+@media(max-width: 1111px){
+    .language_text{
+        width:558px;
+        font-size: 1em;
+        /*max-width:1015px;
+        min-width:1015px;*/
+    }
+    .big_text{
+        font-size: 42px;
+
+    }
+}
+@media(max-width: 680px){
+    .language_text{
+        width:300px;
+        font-size: 1.18em;
+        /*max-width:1015px;
+        min-width:1015px;*/
+    }
+    .big_text{
+        font-size: 30px;
+
+    }
 }
 .language_text_color{
     color:#35C9F2;
@@ -1520,7 +1567,8 @@ text-align: center;
     z-index: 0;
 }
 .page_top{
-    margin:130px 0;
+    margin-top: 130px;
+    margin-bottom: 20px;
     width:100%
 }
 .page_top_wrapper{
@@ -1631,7 +1679,7 @@ grid-column-gap: 38px;
     border: none;
     width:211px;
     white-space: nowrap;
-    padding: 6px 23px;
+    padding: 8px 23px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -1719,18 +1767,27 @@ grid-column-gap: 38px;
 }
 .scroll_down_svg{
     margin: 0 auto;
+    padding-top:60px;
     width: max-content;
+    max-width: 100%;
 
 }
 .scroll_down_svg svg{
     fill:#fefefe66;
-    transform: rotate(90deg) scaleY(1.2) scaleX(1.2);
+    transition: 0.3s;
+    transform: rotate(90deg) scaleY(2.3) scaleX(1.6);
 
+}
+.scroll_down_svg:hover svg{
+    fill:#fefefe;
+    transition: 0.3s;
+    transform: rotate(90deg) scaleY(2.5) scaleX(1.9);
 }
     /*media for top page grid*/
 
 
     /*secondary nav*/
+
 .secondary_nav{
     position: -webkit-sticky;
     position: sticky;
@@ -1738,10 +1795,12 @@ grid-column-gap: 38px;
     z-index: 22;
     display: inline-block;
     margin-top: 8px;
-    margin-bottom: 60px;
     margin-left: 15px;
     /*background-color: var(--main-color-light);*/
     border-radius: 6px;
+}
+@media(prefers-reduced-motion: reduce){
+    .secondary_nav{background-color: #ea2222}
 }
 .secondary_nav_inner{
     position: relative;
@@ -1755,13 +1814,40 @@ grid-column-gap: 38px;
     border-radius: 1px;
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
+
+}
+@media (max-width: 1600px) {
+    .secondary_nav{
+        width: 100%;
+        margin-top: 0;
+        margin-left: 0;
+        top: 59px;
+        padding:0.89em 0;
+        background-color: var(--main-color-light);
+
+    }
+    .secondary_nav_inner{
+        margin: 0 auto;
+        position: relative;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        padding: 4px 2px;
+        flex-direction: row;
+        justify-content: center;
+        /*border-radius: 23px;*/
+        border-radius: 1px;
+        -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
+        transition: 0.3s cubic-bezier(.165, .84, .44, 1);
+    }
 }
 .secondary_nav_inner_item1,.secondary_nav_inner_item2,.secondary_nav_inner_item3,.secondary_nav_inner_item4{
     position: relative;
     z-index: 2;
     display: inline-block;
     margin: 2px;
-    padding: .1em 1.2em .7em;
+    padding: .1em 1.2em 0;
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 auto;
     -ms-flex: 0 0 auto;
@@ -2050,7 +2136,8 @@ grid-column-gap: 38px;
     padding-left: 6px;
     height:48px;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .selected_version{
     position: absolute;
@@ -2186,12 +2273,27 @@ grid-column-gap: 38px;
     justify-content: center;
     align-items: center;
     border:2px solid #fefefe66;
+    transition: 0.3ms ease-in-out;
 }
 
 .video_parent[data-isopen="true"] {
     width: 985px;
     height: 554px;
     /*border-radius: 25px;*/
+}
+@media(max-width: 1150px){
+    .video_parent[data-isopen="true"] {
+        width: 650px;
+        height: 365px;
+        /*border-radius: 25px;*/
+    }
+}
+@media(max-width: 820px){
+    .video_parent[data-isopen="true"] {
+        width: 548px;
+        height: 308px;
+        /*border-radius: 25px;*/
+    }
 }
 
 .video_play{
@@ -2245,14 +2347,30 @@ grid-column-gap: 38px;
 
 
 }
-@media (max-width: 900px) {
+
+@media (max-width: 1100px) {
+    .card_wrapper_flex{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .card_flex {
+        flex: 0 0 48% !important;
+        margin-bottom:1.8rem;
+
+    }
+}
+@media (max-width: 600px) {
     .card_wrapper_flex{
         flex-direction: column;
+        padding: 0 0;
     }
     .card_flex {
         flex: 0 0 100% !important;
         margin-bottom:1.8rem;
 
+    }
+    .card_inner{
+        padding: 0px 1.5em;
     }
 }
 
@@ -2354,7 +2472,7 @@ grid-column-gap: 38px;
 }
 .cc_button{
     margin:0 auto;
-    color:var(--not-black-black);
+    color:var(--not-black);
     font-weight: 500;
     background-color: var(--not-white);
     border: none;
