--- a/components/navbar2.module.css
+++ b/components/navbar2.module.css
@@ -25,10 +25,7 @@
 .nav_sec_left{
     flex:0 0 43%;
 }
-.nav_sec_left  ul li{
-    margin-right:6%;
-    white-space: nowrap;
-}
+.nav_sec_left  ul
 .nav_sec_center{
     flex:0 0 12%;
     position: relative;
@@ -36,10 +33,28 @@
 .nav_sec_right{
     flex:0 0 43%;
 }
-.nav_ul{
-    display:flex;
+.nav_ul_left, .nav_ul_right{
+    flex:0 0 43%;
+    display: flex;
     list-style: none;
+    align-items: center;
     justify-content: flex-start;
+}
+.nav_ul_left{
+    padding-left:2em;
+    justify-content: flex-start;
+}
+.nav_ul_right{
+    padding-right:2em;
+    justify-content: flex-end;
+}
+.nav_ul_left li{
+    margin-right:6%;
+    white-space: nowrap;
+}
+.nav_ul_right li{
+    margin-left:6%;
+    white-space: nowrap;
 }
 .nav_sec_right  ul{
     justify-content: right;
@@ -98,9 +113,6 @@
     transition: all 0.6s cubic-bezier(.25,.8,.25,1);
 
 
-}
-.nav_search_svg{
-    margin-right: 28px;
 }
 .nav_li_scroll a{
     color:#12263a;
