--- a/styles/global.css
+++ b/styles/global.css
@@ -21,6 +21,28 @@
     --heading-color-black:#1d1d1f;
     --font-fam:  'Montserrat', sans-serif;
     --font-acc:  'Montserrat', sans-serif;
+    --padding-m:1.5em;
+}
+.padding-0{
+    padding: 0em;
+}
+.padding-025{
+    padding: 0.25em;
+}
+.padding-05{
+    padding: 0.5em;
+}
+.padding-1{
+    padding: 1em;
+}
+.padding-15{
+    padding: 1.5em;
+}
+.padding-2{
+    padding: 2em;
+}
+.padding-3{
+    padding: 3em;
 }
 html, body{
     /*scroll-snap-type: y proximity;*/
@@ -40,7 +62,13 @@ html, body{
 
 *, *::before, *::after{
     box-sizing: border-box;
+    margin:0;
+    padding:0;
 }
+/**{
+    -webkit-box-shadow: 0px 0px 2px 1px #D92B3A !important;
+    box-shadow: 0px 0px 2px 1px #D92B3A !important;
+}*/
 
 a{
     font-family: var(--font-fam);
@@ -58,6 +86,17 @@ img {
     display: block;
     object-fit: contain;
 }
+h1, h2, h3{
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+}
+p{
+    margin-bottom: 0.75em;
+    font-size: 1.125rem;
+    font-weight: 500;
+    max-width:80ch;
+    color:var(--text-color-white);
+}
 
 p, h1, h2, h3, h4, h5{
     font-family: var(--font-fam);
@@ -71,12 +110,7 @@ p, h2, h3, h4, h5{
     margin-bottom: 1em;
     color:var(--heading-color-white);
 }
-p{
-    font-size: 1.125rem;
-    max-width:68ch;
-    font-weight: 500;
-    color:var(--text-color-white);
-}
+
 .py-2{
     position: relative;
     color:#ffffff;
@@ -91,8 +125,8 @@ p{
 }
 ul{
     list-style: none;
-/*    margin:0;
-    padding:0;*/
+  margin:0;
+    padding:0;
 }
 li{
     font-family: 'Montserrat', sans-serif;
