--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -150,8 +150,7 @@ background: #ffffff;
     margin-right: auto;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    padding-left: 22px;
-    padding-right: 22px;
+    padding:var(--padding-m);
     max-width: 79.75rem;
     display: flex;
     margin: 0 auto;
@@ -172,12 +171,13 @@ background: #ffffff;
 }
 .paragraph{
     text-align: center;
-    line-height: 1.3em;
-}
-.paragraph h2{
     max-width:80%;
     margin-left: auto;
     margin-right: auto;
+}
+.paragraph h2{
+
+
 }
 .dc{
     display: flex;
@@ -1144,10 +1144,8 @@ text-align: center;
 .v_r_a_video_background{
     position: absolute;
     right: 0;
-    bottom: -16.5em;
     min-width: 100%;
     min-height: 100%;
-
     z-index: 1;
 }
 .v_r_a_video_background video{
@@ -1193,7 +1191,7 @@ text-align: center;
 .v_r_a_card_inner_format_wrapper{
     display:grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 20px;
+    grid-column-gap: 1.25em;
     margin-top: 25px;
 }
 .v_r_a_card_inner_format_wrapper ul{
@@ -1229,12 +1227,12 @@ text-align: center;
 .v_r_a_card_inner_format_wrapper_resolution ul li span{
     margin: 0;
     padding: 0;
-    margin-top: -8px;
+    line-height: 1.18;
 }
 .v_r_a_card_inner_format_wrapper_ratio{
     display:grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1px;
+    grid-column-gap: 1.25em;
     margin-top: 2.6em;
     font-size: 1.125em;
 
@@ -1655,8 +1653,7 @@ grid-column-gap: 38px;
 }
 .main_title_wrapper{
     grid-area: title;
-    padding-left: 1rem;
-    padding-right: 1rem;
+
 
 }
 .main_title_text{
@@ -2018,7 +2015,6 @@ grid-column-gap: 38px;
     padding: 20px 0;
 }
 .product_versions_label{
-    font-size: max(12px,.83vw);
     line-height: 1;
     letter-spacing: .05em;
     text-transform: uppercase;
@@ -2030,7 +2026,6 @@ grid-column-gap: 38px;
 }
 .product_version{
     position: relative;
-    height: 30px;
     margin-left: 30px;
 }
 .purchase_options{
@@ -2547,7 +2542,9 @@ font-size: 1.099rem;
     font-weight: 400;
 }
 .card_inner_extended_description{
-    width:100%;
+    width:68%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
 }
