--- a/styles/global.css
+++ b/styles/global.css
@@ -65,10 +65,12 @@ html, body{
     margin:0;
     padding:0;
 }
-/**{
+/*
+*{
     -webkit-box-shadow: 0px 0px 2px 1px #D92B3A !important;
     box-shadow: 0px 0px 2px 1px #D92B3A !important;
-}*/
+}
+*/
 
 a{
     font-family: var(--font-fam);
