--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -1252,7 +1252,8 @@ text-align: center;
     flex-direction: column;
     justify-content: center;
 }
-.ratio_icons{
+.ratio_icons span + span{
+    margin-left:0.22em !important;
 
 }
 .language_text{
@@ -1549,240 +1550,7 @@ text-align: center;
 
 
 /*new shit*/
-    /*page top*/
-.main_wrapper{
-    position:relative;
-    width:100%;
-    height: auto;
 
-
-}
-.video_background{
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    z-index: 0;
-}
-.page_top{
-    margin-top: 130px;
-    margin-bottom: 20px;
-    width:100%
-}
-.page_top_wrapper{
-    width: 100%;
-    padding-right: 20px;
-    padding-left: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    height:100%;
-}
-@media (min-width: 375px) {
-    .page_top_wrapper {
-        max-width: 340px;
-    }
-}
-
-@media (min-width: 576px) {
-    .page_top_wrapper {
-        max-width: 540px;
-    }
-}
-
-@media (min-width: 768px) {
-    .page_top_wrapper {
-        max-width: 720px;
-    }
-}
-
-@media (min-width: 992px) {
-    .page_top_wrapper {
-        max-width: 880px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .page_top_wrapper {
-        max-width: 880px;
-    }
-}
-.page_top_inner{
-
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 0.98rem;
-
-grid-column-gap: 38px;
-    grid-template-areas:
-    "description  description"
-		"title title"
-		"free  license"
-		"options options"
-		"payment payment"
-		"checkout price"
-		"more more";
-
-}
-@media (max-width: 375px) {
-    .page_top_inner {
-        grid-template-areas:
-    "description"
-		"title"
-		"free"
-		"license"
-		"options"
-		"payment"
-		"checkout"
-		"price"
-		"more";
-
-    }
-}
-.main_title_description_wrapper{
-    grid-area: description;
-}
-.main_title_description_text{
-    margin:0 auto;
-    text-align: center;
-    font-size: 38px;
-    font-weight: 300;
-
-
-}
-.main_title_wrapper{
-    grid-area: title;
-
-
-}
-.main_title_text{
-    margin:0 auto;
-    text-align: center;
-    font-size: 80px;
-    font-weight: 700;
-
-
-}
-.free_trial_wrapper{
-    grid-area: free;
-    text-align: right;
-    /*margin-top:68px*/;
-
-}
-.free_trial_button, .license_editions_button, .go_to_checkout_button{
-    margin:0 auto;
-    color:#ffffff;
-    font-weight: 500;
-    background-color: var(--main-color-cta);
-    border: none;
-    width:211px;
-    white-space: nowrap;
-    padding: 8px 23px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 50px;
-}
-.free_trial_button{
-    margin-right: 30px;
-}
-.license_editions_button{
-    margin-left: 30px;
-
-}
-.license_editions_wrapper{
-    grid-area: license;
-    text-align: left;
-    /*margin-top:68px*/;
-
-}
-.pricing_options_wrapper{
-    grid-area: options;
-    display: flex;
-    flex-direction: row;
-    padding-top: 3.5rem;
-    justify-content: space-between;
-
-}
-.pricing_options_description{
-
-
-}
-.pricing_options_description_title{
-    font-size:1.8rem;
-    font-weight: 500;
-    margin:0;
-    line-height: 0.9;
-}
-.pricing_options_description_title span{
-    font-size:1.23rem;
-    font-weight: 200;
-    letter-spacing: 0.006rem;
-}
-.pricing_options_dropdown{
-    height:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-}
-.payment_select_wrapper{
-    grid-area: payment;
-    /*margin-top:68px*/;
-
-}
-.payment_select_inner{
-    border-top: 1px solid #ffffff;
-    border-bottom: 1px solid #ffffff;
-
-
-}
-.go_to_checkout_wrapper{
-    grid-area: checkout;
-    /*margin-top:68px*/;
-
-}
-.price_wrapper{
-    grid-area: price;
-    /*margin-top:68px*/;
-    text-align: right;
-
-}
-.price_text{
-    font-size: 1.9rem;
-    font-weight: 300;
-    color:#ffffff;
-    margin: 0;
-    padding: 0;
-
-}
-.scroll_down_wrapper{
-    grid-area: more;
-    /*margin-top:68px*/;
-
-}
-.scroll_down_svg{
-    margin: 0 auto;
-    padding-top:60px;
-    width: max-content;
-    max-width: 100%;
-
-}
-.scroll_down_svg svg{
-    fill:#fefefe66;
-    transition: 0.3s;
-    transform: rotate(90deg) scaleY(2.3) scaleX(1.6);
-
-}
-.scroll_down_svg:hover svg{
-    fill:#fefefe;
-    transition: 0.3s;
-    transform: rotate(90deg) scaleY(2.5) scaleX(1.9);
-}
-    /*media for top page grid*/
 
 
     /*secondary nav*/
@@ -2129,8 +1897,7 @@ grid-column-gap: 38px;
     position: relative;
     background: #fefefe;
     height: max-content;
-    width: 200px;
-    padding-left: 6px;
+
     height:48px;
     cursor: pointer;
     z-index: 3;
@@ -2651,4 +2418,369 @@ margin:0;
 
 
 
+/*try better grid shit*/
+.page_top_grid{
+    display:grid;
+    grid-template-columns: repeat(9, 1fr);
 
+    grid-row-gap: 2em;
+    grid-column-gap: 1em;
+    margin:0 auto;
+    max-width: 900px;
+    padding-left: 1em;
+    padding-right: 1em;
+
+}
+.title_desc_cell{
+    grid-column: 1 / -1;
+}
+.title_cell{
+    grid-column: 1 / -1;
+}
+.free_trial_cell{
+    grid-column: 4 / 5;
+
+}
+.license_editions_cell{
+    grid-column: 6 / 7;
+
+}
+.pricing_cell{
+    grid-column: 1 / 7;
+
+}
+.dropdown_cell{
+    grid-column: 7 / -1;
+
+}
+.payment_text_cell{
+    grid-column: 1 / 3;
+    grid-row: span 1;
+}
+.payment_select_cell{
+    grid-column: 4 / -1;
+    grid-row: span 1;
+}
+.payment_text_cell_text{
+    margin:0;
+}
+
+.payment_info_cell{
+    grid-column: 1 / -1;
+    grid-row: span 1;
+}
+.checkout_btn_cell{
+    grid-column: 1 / 3;
+
+}
+.checkout_price_cell{
+    grid-column: 6 / -1;
+}
+.checkout_price_cell p{
+    text-align: right;
+}
+.arrow_cell{
+    grid-column: 5 / 6;
+
+}
+@media (max-width: 668px) {
+    .free_trial_cell{
+        grid-column: 2 / 3;
+
+    }
+    .license_editions_cell{
+        grid-column: 8 / 9;
+
+    }
+
+}
+@media (max-width: 598px) {
+    .pricing_cell{
+        grid-column: 1 / 6;
+
+    }
+    .dropdown_cell {
+        grid-column: 6/ -1;
+    }
+
+}
+
+@media (max-width: 700px) {
+    .pricing_cell{
+        grid-column: 1 / 6;
+
+    }
+    .dropdown_cell {
+        grid-column: 6/ -1;
+    }
+
+}
+
+@media (max-width: 574px) {
+    .main_title_text{
+        font-size: 3.8rem !important;
+    }
+    .pricing_cell{
+        grid-column: 1 / -1;
+
+    }
+    .dropdown_cell {
+        grid-column: 1/ -1;
+    }
+    .free_trial_cell{
+        grid-column: 5 / 6;
+
+
+    }
+    .license_editions_cell{
+        grid-column: 5 / 6;
+
+    }
+    .checkout_btn_cell {
+        grid-column: 1 / -1;
+    }
+
+
+    .checkout_price_cell{
+        grid-column: 1 / -1;
+    }
+
+
+}
+
+
+
+/*page top*/
+.main_wrapper{
+    position:relative;
+    width:100%;
+    height: auto;
+
+
+}
+.video_background{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    z-index: 0;
+}
+.page_top{
+    margin-top: 130px;
+    margin-bottom: 20px;
+    width:100%
+}
+.page_top_wrapper{
+    width: 100%;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    height:100%;
+}
+@media (min-width: 375px) {
+    .page_top_wrapper {
+        max-width: 340px;
+    }
+}
+
+@media (min-width: 576px) {
+    .page_top_wrapper {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .page_top_wrapper {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .page_top_wrapper {
+        max-width: 880px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .page_top_wrapper {
+        max-width: 880px;
+    }
+}
+.page_top_inner{
+
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 0.98rem;
+
+    grid-column-gap: 38px;
+    grid-template-areas:
+    "description  description"
+		"title title"
+		"free  license"
+		"options options"
+		"payment payment"
+		"checkout price"
+		"more more";
+
+}
+@media (max-width: 375px) {
+    .page_top_inner {
+        grid-template-areas:
+    "description"
+		"title"
+		"free"
+		"license"
+		"options"
+		"payment"
+		"checkout"
+		"price"
+		"more";
+
+    }
+}
+.main_title_description_wrapper{
+    grid-area: description;
+}
+.main_title_description_text{
+    margin:0 auto;
+    text-align: center;
+    font-size: 38px;
+    font-weight: 300;
+
+
+}
+.main_title_wrapper{
+    grid-area: title;
+
+
+}
+.main_title_text{
+    margin:0 auto;
+    text-align: center;
+    font-size: 5em;
+    font-weight: 700;
+
+
+}
+.free_trial_wrapper{
+    grid-area: free;
+    text-align: right;
+    /*margin-top:68px*/;
+
+}
+.free_trial_button, .license_editions_button, .go_to_checkout_button{
+    margin:0 auto;
+    color:#ffffff;
+    font-weight: 500;
+    background-color: var(--main-color-cta);
+    border: none;
+    width:211px;
+    white-space: nowrap;
+    padding: 8px 23px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 50px;
+}
+.free_trial_button{
+    margin-right: 30px;
+}
+.license_editions_button{
+    margin-left: 30px;
+
+}
+.license_editions_wrapper{
+    grid-area: license;
+    text-align: left;
+    /*margin-top:68px*/;
+
+}
+.pricing_options_wrapper{
+    grid-area: options;
+    display: flex;
+    flex-direction: row;
+    padding-top: 3.5rem;
+    justify-content: space-between;
+
+}
+.pricing_options_description{
+
+
+}
+.pricing_options_description_title{
+    font-size:1.8rem;
+    font-weight: 500;
+    margin:0;
+    line-height: 0.9;
+}
+.pricing_options_description_title span{
+    font-size:1.23rem;
+    font-weight: 200;
+    letter-spacing: 0.006rem;
+}
+.pricing_options_dropdown{
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+.payment_select_wrapper{
+    grid-area: payment;
+    /*margin-top:68px*/;
+
+}
+.payment_select_inner{
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+
+
+}
+.go_to_checkout_wrapper{
+    grid-area: checkout;
+    /*margin-top:68px*/;
+
+}
+.price_wrapper{
+    grid-area: price;
+    /*margin-top:68px*/;
+    text-align: right;
+
+}
+.price_text{
+    font-size: 1.9rem;
+    font-weight: 300;
+    color:#ffffff;
+    margin: 0;
+    padding: 0;
+
+}
+.scroll_down_wrapper{
+    grid-area: more;
+    /*margin-top:68px*/;
+
+}
+.scroll_down_svg{
+    margin: 0 auto;
+    padding-top:60px;
+    width: max-content;
+    max-width: 100%;
+
+}
+.scroll_down_svg svg{
+    fill:#fefefe66;
+    transition: 0.3s;
+    transform: rotate(90deg) scaleY(2.3) scaleX(1.6);
+
+}
+.scroll_down_svg:hover svg{
+    fill:#fefefe;
+    transition: 0.3s;
+    transform: rotate(90deg) scaleY(2.5) scaleX(1.9);
+}
+/*media for top page grid*/
