--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -2459,15 +2459,23 @@ margin:0;
 }
 .payment_select_cell{
     grid-column: 4 / -1;
-    grid-row: span 1;
+    border-top:1px solid #fefefe;
 }
 .payment_text_cell_text{
     margin:0;
+    border-top:1px solid #fefefe;
+}
+.payment_empty_cell{
+    border-top:1px solid #fefefe;
+    margin-left:-1em;
+    margin-right:-1em;
 }
 
 .payment_info_cell{
     grid-column: 1 / -1;
-    grid-row: span 1;
+}
+.payment_info_cell p{
+    text-align: right;
 }
 .checkout_btn_cell{
     grid-column: 1 / 3;
@@ -2476,8 +2484,13 @@ margin:0;
 .checkout_price_cell{
     grid-column: 6 / -1;
 }
+.checkout_price_cell small{
+    font-size:1.3rem;
+    color:#fefefe88;
+}
 .checkout_price_cell p{
     text-align: right;
+    line-height: 1.2;
 }
 .arrow_cell{
     grid-column: 5 / 6;
