--- a/styles/global.css
+++ b/styles/global.css
@@ -69,6 +69,8 @@ html, body{
 *{
     -webkit-box-shadow: 0px 0px 2px 1px #D92B3A !important;
     box-shadow: 0px 0px 2px 1px #D92B3A !important;
+    background-color:#19191920 !important;
+    background:#19191915 !important;
 }
 */
 
