--- a/styles/global.css
+++ b/styles/global.css
@@ -65,18 +65,15 @@ html, body{
     margin:0;
     padding:0;
 }
-/*
 *{
     -webkit-box-shadow: 0px 0px 2px 1px #D92B3A !important;
     box-shadow: 0px 0px 2px 1px #D92B3A !important;
-    background-color:#19191920 !important;
-    background:#19191915 !important;
+ /*   background-color:#19191920 !important;
+    background:#19191915 !important;*/
 }
-*/
 
 a{
     font-family: var(--font-fam);
-    font-weight: 500;
     color:#ffffff;
     text-decoration: none;
 }
