--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -129,21 +129,21 @@ background: #ffffff;
     position: relative;
     width: 100%;
 
-    background:#051624;
+    /*background:var(--main-color);*/
 
 
 }
 .video_section, .card_section, .video_format_section, .language_section{
     position: relative;
     padding: 5rem 0;
+    background:var(--main-color);
 }
 .container{
     position: relative;
-
-    /*max-width: 70rem;*/
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    max-width: 79.5rem;
+    width:100%;
     margin: 0 auto;
+    padding:0 1.25em;
 }
 .content_inner{
     margin-left: auto;
@@ -1134,11 +1134,11 @@ text-align: center;
 .v_r_a_title{
     position: relative;
     font-weight: 400;
-    font-size: 48px;
+    font-size: 2.6em;
     letter-spacing: 1.2px;
     z-index: 2;
-    margin-top: -20px;
     margin-bottom: 5rem;
+    padding-top:2.2rem;
 }
 
 .v_r_a_video_background{
@@ -1147,6 +1147,7 @@ text-align: center;
     min-width: 100%;
     min-height: 100%;
     z-index: 1;
+
 }
 .v_r_a_video_background video{
     object-fit: cover;
@@ -1179,7 +1180,6 @@ text-align: center;
 .v_r_a_card_inner_description{
     text-align: center;
     padding: 0 2em;
-    max-width:21rem;
 
 }
 .v_r_a_card_inner_description_text{
@@ -1570,13 +1570,13 @@ text-align: center;
 .secondary_nav{
     position: -webkit-sticky;
     position: sticky;
-    top: 81px;
+    top: 59px;
     z-index: 22;
-    margin-top: 8px;
-    margin-left: 15px;
+
     /*background-color: var(--main-color-light);*/
-    border-radius: 6px;
     display:flex;
+    border-top: 1px solid #191919;
+    background-color: #fefefe;
 }
 @media(prefers-reduced-motion: reduce){
     .secondary_nav{background-color: #ea2222}
@@ -1587,7 +1587,7 @@ text-align: center;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    padding: 4px 2px;
+    padding: 1em;
     flex-wrap: wrap;
     /*border-radius: 23px;*/
     border-radius: 1px;
@@ -1612,7 +1612,6 @@ text-align: center;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        padding: 4px 2px;
         flex-direction: row;
         justify-content: center;
         /*border-radius: 23px;*/
@@ -1625,47 +1624,25 @@ text-align: center;
     position: relative;
     z-index: 2;
     display: inline-block;
-    margin: 2px;
     padding: .1em 1.2em 0;
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 auto;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    border-radius: 35px;
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
-    color: #ffffff;
+    color: var(--main-color);
     color: #a8a8a8;
     font-size: .95rem;
     line-height: 1;
-    font-weight: 500;
+
     letter-spacing: .05px;
     text-decoration: none;
     /*text-transform: uppercase;*/
     cursor: pointer;
 }
-/*.secondary_nav_inner_item1::before,.secondary_nav_inner_item2::before,.secondary_nav_inner_item3::before,.secondary_nav_inner_item4::before{
-    content:"";
-    left: 2%;
-    top:50%;
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    background-color: #fefefe;
-}
-.secondary_nav_inner_item1::after,.secondary_nav_inner_item2::after,.secondary_nav_inner_item3::after{
-    content:"";
-    left: 3.2%;
-    top:50%;
-    position: absolute;
-    width: 1px;
-    height: calc(100% + 4px);
-    background-color: #fefefe;
-}*/
 .secondary_nav_inner_item1:hover, .active_item1{
     /*border-radius: 20px;*/
-    border-radius: 2px;
     /*background: #fefefe;*/
     /*transform: translateX(12px) translateY(-3px);*/
     /*
@@ -1673,7 +1650,7 @@ text-align: center;
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
     color: var(--main-color);
-    color:#ffffff;
+
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
 .active_item1::before, .active_item2::before, .active_item3::before, .active_item4::before{
@@ -1682,7 +1659,7 @@ text-align: center;
     width:22px;
     left: 0;
     top:30%;
-    background-color: #fefefe;
+    background-color: var(--main-color);
     transform: translate(-50%, 0);
     position: absolute;
 
@@ -1693,7 +1670,7 @@ text-align: center;
     width:1px;
     left: 6%;
     top:30%;
-    background-color: #fefefe;
+    background-color: var(--main-color);
     transform: translate(0, 0);
     position: absolute;
 
@@ -1712,7 +1689,7 @@ text-align: center;
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
     color: var(--main-color);
-    color:#ffffff;
+
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -1726,7 +1703,7 @@ text-align: center;
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
     color: var(--main-color);
-    color:#ffffff;
+
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
 .secondary_nav_inner_item4:hover, .active_item4{
@@ -1739,7 +1716,7 @@ text-align: center;
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
     color: var(--main-color);
-    color:#ffffff;
+
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -2124,32 +2101,6 @@ text-align: center;
 
 }
 
-@media (max-width: 1100px) {
-    .card_wrapper_flex{
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    .card_flex {
-        flex: 0 0 48% !important;
-        margin-bottom:1.8rem;
-
-    }
-}
-@media (max-width: 600px) {
-    .card_wrapper_flex{
-        flex-direction: column;
-        padding: 0 0;
-    }
-    .card_flex {
-        flex: 0 0 100% !important;
-        margin-bottom:1.8rem;
-
-    }
-    .card_inner{
-        padding: 0px 1.5em;
-    }
-}
-
 .card{
     position:relative;
     border-radius: 25px;
@@ -2197,6 +2148,7 @@ text-align: center;
     width:100%;
     /*padding-bottom: 68px;*/
 }
+
 .streaming_services_icons{
     margin-top: 30px;
     display:grid;
@@ -2397,6 +2349,40 @@ margin:0;
 }
 
 
+@media (max-width: 1100px) {
+    .card_wrapper_flex{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .card_flex {
+        flex: 0 0 48% !important;
+        margin-bottom:1.8rem;
+
+    }
+}
+@media (max-width: 600px) {
+    .card_wrapper_flex{
+        flex-direction: column;
+        padding: 0 0;
+    }
+    .card_flex {
+        flex: 0 0 100% !important;
+        margin-bottom:1.8rem;
+
+    }
+    .card_inner{
+        padding: 0 0.8em;
+    }
+    .card_inner_title{
+        padding: 0.8em 0;
+    }
+    .card_inner_title h4{
+        margin:0;
+    }
+}
+
+
+
 
 
 
@@ -2541,6 +2527,18 @@ margin:0;
     }
 
 }
+@media (max-width: 899px) {
+
+    .pricing_cell{
+        grid-column: 1 / -1;
+
+    }
+    .dropdown_cell {
+        grid-column: 1/ 5;
+    }
+
+
+}
 
 @media (max-width: 574px) {
     .main_title_text{
@@ -2569,6 +2567,14 @@ margin:0;
 
     .checkout_price_cell{
         grid-column: 1 / -1;
+    }
+
+    .payment_text_cell{
+        grid-column: 1 / -1;
+    }
+    .payment_select_cell{
+        grid-column: 1 / -1;
+        border-top:1px solid #fefefe;
     }
 
 
