--- a/styles/global.css
+++ b/styles/global.css
@@ -64,10 +64,12 @@ html, body{
     box-sizing: border-box;
     margin:0;
     padding:0;
-}
-/**{
+}/*
+*{
     -webkit-box-shadow: 0px 0px 2px 1px #D92B3A !important;
     box-shadow: 0px 0px 2px 1px #D92B3A !important;
+    -webkit-box-shadow: inset 0px 0px 1px 1px #D92B3A !important;
+    box-shadow: inset 0px 0px 1px 1px #D92B3A !important;
  !*   background-color:#19191920 !important;
     background:#19191915 !important;*!
 }*/
