--- a/components/navbar2.module.css
+++ b/components/navbar2.module.css
@@ -5,7 +5,6 @@
     left:0;
     right:0;
     z-index: 98;
-    display: block;
     margin: 0;
     width: 100%;
     height:48px;
@@ -71,7 +70,7 @@
 }
 
 .nav_icon_wrapper{
-    padding-top:36px;
+    transform: translateY(2rem);
     margin: auto;
     width: fit-content;
     border-radius: 999px;
@@ -123,7 +122,7 @@
     fill:#12263a;
 }
 .nav_icon_wrapper_scroll{
-    padding-top: 5px;
+    transform: translateY(0);
     margin: auto;
     width: fit-content;
     border-radius: 999px;
@@ -185,7 +184,7 @@
     margin:0 auto;
     color:#ffffff !important;
     font-weight: 500;
-    background-color: #D92B3A;
+    background-color: var(--trying-shit);
     border: none;
     width:160px;
     white-space: nowrap;
