--- a/components/navbarSmall.module.css
+++ b/components/navbarSmall.module.css
@@ -182,7 +182,7 @@
 }
 .nav_side{
     background-color: hsla(0 0% 0% / 0.5);
-
+    z-index: 99;
     position: fixed;
     top:0;
     bottom:0;
@@ -191,13 +191,22 @@
     /*when somebody turns phone to landscape the menu will decrease padding
     the min will choose the smaller of the 2 values*/
     padding: min(20vh, 11em) 2em;
+    transform: translateX(100%);
+    transition: 0.3s ease-in-out;
 }
 .nav_button{
+    background-size: cover;
     position: absolute;
-    background:#D92B3A;
-    width:1rem;
-    height:1rem;
+    background: #fefefe33 url("/images/icons/burgerer.svg") no-repeat center center;
+    width:3rem;
+    height:3rem;
     border:0;
+    top:1rem;
+    right:1rem;
+    z-index: 9999;
+}
+.nav_button[aria-expanded='true']{
+    background: #fefefe33 url("/images/icons/close_burber.svg") no-repeat center center;
 }
 
 @supports (backdrop-filter: blur(1rem)) {
@@ -205,4 +214,8 @@
         background-color: hsla(0 0% 100% / 0.1);
         backdrop-filter: blur(1rem);
     }
+}
+
+.nav_side[data-visible=true]{
+    transform: translateX(0);
 }
