some shit showing up on safari

--- a/styles/global.css
+++ b/styles/global.css
@@ -61,6 +61,7 @@ html, body{
     box-sizing: border-box;
     scroll-padding-top: 80px;
     overflow-x: hidden;
+    background-color: #fefefe;
 }
 
 *, *::before, *::after{
