some shit showing up on safari

--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -1532,7 +1532,7 @@ text-align: center;
 .asian_cover{
     position: absolute;
     z-index: 3;
-    background-color: var(--main-color);
+    background-color: var(--clr-main);
     width:100%;
     height: 100%;
     top:0%;
@@ -1784,7 +1784,7 @@ text-align: left;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
     color:#ffffff;
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -1823,7 +1823,7 @@ text-align: left;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
     color:#ffffff;
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
@@ -1837,7 +1837,7 @@ text-align: left;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
     color:#ffffff;
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -1850,7 +1850,7 @@ text-align: left;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
     color:#ffffff;
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
