--- a/styles/checkout2.module.css
+++ b/styles/checkout2.module.css
@@ -117,7 +117,7 @@
     border:0px;/*
     border: 2px dashed var(--main-color);*/
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23002047FF' stroke-width='4' stroke-dasharray='13' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
-    background-image: linear-gradient(to right, var(--main-color) 33%, rgba(255,255,255,0) 0%);
+    background-image: linear-gradient(to right, var(--clr-main) 33%, rgba(255,255,255,0) 0%);
     background-position: bottom;
     background-size: 3px 1px;
     background-repeat: repeat-x;
