--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -136,7 +136,7 @@ background: #ffffff;
 .video_section, .card_section, .video_format_section, .language_section{
     position: relative;
     padding: 5rem 0;
-    background:var(--main-color);
+    background:var(--clr-main);
 }
 .container{
     position: relative;
@@ -1257,7 +1257,6 @@ text-align: center;
 
 }
 .language_text{
-    text-align: left;
     word-break: keep-all;
     font-size: 29px;
     font-weight: 600;
@@ -1268,6 +1267,14 @@ text-align: center;
     min-width:1015px;*/
     text-align: justify;
     margin: 0 auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+.language_text span{
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
 .big_text{
     font-size:60px;
@@ -1631,7 +1638,7 @@ text-align: center;
     flex: 0 0 auto;
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
-    color: var(--main-color);
+    color: var(--clr-main);
     color: #a8a8a8;
     font-size: .95rem;
     line-height: 1;
@@ -1649,7 +1656,7 @@ text-align: center;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
 
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -1659,7 +1666,7 @@ text-align: center;
     width:22px;
     left: 0;
     top:30%;
-    background-color: var(--main-color);
+    background-color: var(--clr-main);
     transform: translate(-50%, 0);
     position: absolute;
 
@@ -1670,7 +1677,7 @@ text-align: center;
     width:1px;
     left: 6%;
     top:30%;
-    background-color: var(--main-color);
+    background-color: var(--clr-main);
     transform: translate(0, 0);
     position: absolute;
 
@@ -1688,7 +1695,7 @@ text-align: center;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
 
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
@@ -1702,7 +1709,7 @@ text-align: center;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
 
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
 }
@@ -1715,7 +1722,7 @@ text-align: center;
 
     background: linear-gradient(90deg, rgba(86,135,200,1) 0%, rgba(116,157,210,1) 65%, rgba(147,179,220,1) 100%);
     */
-    color: var(--main-color);
+    color: var(--clr-main);
 
     -webkit-transition:  0.3s cubic-bezier(.165, .84, .44, 1);
     transition: 0.3s cubic-bezier(.165, .84, .44, 1);
@@ -2775,7 +2782,7 @@ margin:0;
     margin:0 auto;
     color:#ffffff;
     font-weight: 500;
-    background-color: var(--main-color-cta);
+    background-color: var(--clr-main-cta);
     border: none;
     width:211px;
     white-space: nowrap;
@@ -2909,4 +2916,25 @@ margin:0;
     min-width: 20.99rem;
     padding-top:1em;
     padding-bottom:1em;
+}
+
+
+.last_section{
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    flex-direction: column;
+    background:var(--clr-neutral-100);
+
+}
+.last_section p{
+    color:var(--clr-neutral-550) !important;
+}
+.last_section h1{
+    color:var(--clr-neutral-800) !important;
+    font-size: 3.8rem;
+    line-height: 1;
+    font-weight: 800;
+    margin-bottom: 1.5em;
 }
