--- a/components/navbar2.module.css
+++ b/components/navbar2.module.css
@@ -227,3 +227,34 @@
     height:2px;
     background-color: #fefefe;
 }
+
+
+/*store control button*/
+.store_control{
+    display: none;
+}
+.store_control:checked +.lbl > span > div > .s_control_circle{
+
+    transform: translateX(0);
+}
+.store_control:checked +.lbl > span > div{
+    background:#3b8a21;
+
+}
+.s_control_button_wrapper{
+    width:80px;
+    height:40px;
+    background:#919191;
+    border: 1px solid var(--clr-neutral-100);
+    border-radius: 100vh;
+    padding:0.25em;
+    transition: transform 0.2s ease-in-out;
+}
+.s_control_circle{
+    width: calc(39px - 0.5em);
+    height: calc(39px - 0.5em);
+    border-radius: 50%;
+    background-color: #4DC4EF;
+    transform: translateX(calc(40px - 0.122525em));
+    transition: transform 0.2s ease-in-out;
+}
