removed some shit fixed some build errors

--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,7 @@
     --clr-neutral-0:#ffffff;
     --clr-neutral-50: #fefefe;
     --clr-neutral-100: #eef2f8;
+    --clr-neutral-150: #cecfd2;
     --clr-neutral-200: #c2c2c2;
     --clr-neutral-250: #a8a8a8;
     --clr-neutral-500: #6a726d;
