--- a/styles/subtitle3.module.css
+++ b/styles/subtitle3.module.css
@@ -1186,6 +1186,7 @@ text-align: center;
     font-weight: 300;
     text-align: center;
     margin:2.6em auto;
+    color: var(--clr-neutral-150);
 
 }
 .v_r_a_card_inner_format_wrapper{
@@ -1263,6 +1264,7 @@ text-align: center;
     line-height: 1.9;
     letter-spacing: 0.001rem;
     width:1015px;
+    color:var(--clr-neutral-250);
    /* max-width:1015px;
     min-width:1015px;*/
     text-align: justify;
@@ -1275,6 +1277,8 @@ text-align: center;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
+    color:var(--clr-neutral-50);
+
 }
 .big_text{
     font-size:60px;
@@ -2245,9 +2249,10 @@ text-align: center;
 }
 .card_inner_title h4{
     font-size: 1.68rem;
-    color:#ffffff;
+    color:#fefefe;
     text-align: center;
-    letter-spacing: 0.011em;
+    font-weight: 500;
+    letter-spacing: 0.25px
 
 }
 .card_inner_title_extended{
@@ -2311,7 +2316,7 @@ padding-left:0.6em;
     font-size: 1.125rem;
     line-height: 1.518;
     font-weight: normal;
-    color:#fefefeef;
+    color:var(--clr-neutral-150);
 }
 .card_inner_extended_description_title h4{
     font-size: 1.5em;
@@ -2397,6 +2402,8 @@ padding-left:0.6em;
     }
     .card_inner_title h4{
         margin:0;
+        font-weight: 500;
+        letter-spacing: 0.25px;
     }
 }
 
