--- a/components/homeMain2.module.css
+++ b/components/homeMain2.module.css
@@ -48,140 +48,35 @@
 
 
 }*/
-.product_main_wrapper{
+.product_main_wrapper {
     position: relative;
-    max-width: 1200px;
-    margin: auto;
-    overflow: visible;
-    display: grid;
-    grid-row-gap: 80px;
-    grid-column-gap: 80px;
-    grid-template-areas:
-            "eztitles ezconvert"
-            "titles3d titles3d"
-            "plugins plugins";
+    max-width: var(--large-max-width);
 
 
-
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .product_main{
-    flex: 0 0 49%;
-    position: relative;
-    /*height:998px;*/
-    margin: auto;
-    overflow: visible;
+
 
 
 
 }
-.eztitles{
-    grid-area: eztitles;
 
-}
-.ezconvert{
-    grid-area: ezconvert;
 
-}
-.titles3d{
-    grid-area: titles3d;
 
-}
-.plugins{
-    grid-area: plugins;
 
-}
-.product_main_inner{
-    display:grid;
-    grid-row-gap: 30px;
-    grid-column-gap: 30px;
-    grid-template-columns: 1fr 2fr;
-}
-.product_main_inner_title{
-    margin:0;
-    line-height: 1.18em;
-}
-.product_main_inner_try_button{
-    position: relative;
-    width:200px;
-    height: 50px;
-    color:#000000;
-    border-radius: 11px;
-    background-color:#fefefe;
-
-}
-.product_main_inner_buy_button{
-    position: relative;
-    width:200px;
-    height: 50px;
-    color:#ffffff;
-    border-radius: 11px;
-    background-color:#2e77bb;
-}
-.button_inner{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-}
-.product_main_description{
-    margin-top: 26px;
-    margin-bottom: 15px;
-    height: 144px;
-}
 .product{
-    position: relative;
-    max-width: 1200px;
-    height:600px;
-    margin: auto;
-    overflow: visible;
-    grid-area: secondary_product;
+
 
 }
 .main_center{
-    max-width:799px;
-    max-height:799px;
-    position: absolute;
-    object-fit: contain;
-    right:-300px;
-    user-select: none;
-    pointer-events: none;
+
 
 }
-.main_right{
-    width:198px;
-    height:500px;
-    position: absolute;
-    object-fit:contain;
-    right:0;
-    bottom:-5%;
-    right:-115px;
-    z-index: 2;
-    user-select: none;
-    pointer-events: none;
-}
-.main_bottom{
-    width:500px;
-    height:500px;
-    position: absolute;
-    object-fit: contain;
-    right:-80px;
-    user-select: none;
-    pointer-events: none;
-    z-index: 3;
 
-}
-.main_float{
-    width:220px;
-    height:180px;
-    position: absolute;
-    object-fit: cover;
-    z-index: 2;
-    right:5%;
-    bottom:4%;
-    user-select: none;
-    pointer-events: none;
-}
+
 .stats{
     width: 200px;
     height: 200px;
