--- a/styles/global.css
+++ b/styles/global.css
@@ -59,6 +59,17 @@ html,
   --title-lavg: 4.236rem;
   --title-avg: 2.618rem;
   --title-small: 1.618rem;
+  --ifm-color-gray-0: #ffffff;
+  --ifm-color-gray-100: #f5f6f7;
+  --ifm-color-gray-200: #ebedf0;
+  --ifm-color-gray-300: #dadde1;
+  --ifm-color-gray-400: #ccd0d5;
+  --ifm-color-gray-500: #bec3c9;
+  --ifm-color-gray-600: #8d949e;
+  --ifm-color-gray-700: #606770;
+  --ifm-color-gray-800: #444950;
+  --ifm-color-gray-900: #1c1e21;
+  --ifm-color-gray-1000: #000000;
 }
 
 /* --------------------- */
