--- a/components/input.module.css
+++ b/components/input.module.css
@@ -7,7 +7,7 @@
     margin-bottom: 2%;
     border: none;
     appearance: none;
-    background-color: #ffffff;
+    background-color: var(--clr-neutral-50);
     padding: 12px;
     border-radius: 12px;
     outline: none;
@@ -15,15 +15,17 @@
 
 
 }
+.input::selection{
+    background-color: var(--clr-neutral-900);
+    color: var(--clr-neutral-50);
+}
 
 
 .input_wrapper{
     position: relative;
     font-size: 14px;
     padding-top: 20px;
-    margin-bottom: 5px;
     width: 298px;
-    margin-left: 2%;
 
 }
 .placeholder{
@@ -33,7 +35,7 @@
     top:calc(50% + 8px);
     transform: translateY(-50%);
     color: #19191988;
-    background: #f5f5f5;
+    background: var(--clr-neutral-50);
     transition: 0.3s ease;
 }
 /*
@@ -69,7 +71,7 @@
 .input_wrapper.one input:focus + .placeholder{
     font-size: 12px;
     top:20px;
-    background: #f5f5f5;
+    background: var(--clr-neutral-50);
     color: #35C9F2;
 
 }
