--- a/styles/global.css
+++ b/styles/global.css
@@ -598,6 +598,8 @@ font-size: 6rem;
 .billing {
   /*width: 48%;*/
   top: var(--offset-top);
+  display: flex;
+  flex-direction: column;
 }
 .cart__inner,
 .billing__inner,
@@ -607,7 +609,17 @@ font-size: 6rem;
   padding: 1.3em;
   border-radius: 0.6em;
   margin-bottom: 1em;
+  transition: all 0.3s ease;
 }
+billing__inner{
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+.billing__inner-step{
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
 .billing__inner::before{
   content: "1";
   text-align: center;
