--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -69,3 +69,49 @@
     grid-template-rows: 1fr 1fr;
     margin-bottom:1.3em;
 }
+
+@media only screen and (max-width: 1491px) {
+    .register_wrapper{
+        display:grid;
+        gap:1.5em;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
+@media only screen and (max-width: 1027px) {
+    .section form{
+      margin-top: 200px;
+    }
+    .register_wrapper{
+        display:grid;
+        gap:1.5em;
+        grid-template-columns: 1fr ;
+    }
+}@media only screen and (max-width: 529px) {
+    .section form{
+        position: relative;
+        max-width: 95%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color:var(--clr-neutral-50);
+        border-radius: 20px;
+
+        overflow: hidden;
+        transition: 0.3s;
+    }
+}@media only screen and (max-width: 327px) {
+    .section form{
+        position: relative;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color:var(--clr-neutral-50);
+        border-radius: 20px;
+
+        transition: 0.3s;
+    }
+}
