--- a/components/inputs/input.module.css
+++ b/components/inputs/input.module.css
@@ -1,19 +1,26 @@
 
 
 .input{
-
-    width:298px;
-    margin: 0 auto;
-    margin-bottom: 2%;
+--width:18rem;
+    width:var(--width);
     border: none;
     appearance: none;
     background-color: var(--clr-neutral-50);
     padding: 12px;
-    border-radius: 12px;
+    border-radius: 9px;
     outline: none;
+    position:relative
 
 
 
+}
+.required::before{
+    font-size:20px;
+    content: "*";
+    position:absolute;
+    right:-0.5em;
+    top:-0.5em;
+    color:#D92B3A;
 }
 .input::selection{
     background-color: var(--clr-neutral-900);
@@ -24,18 +31,15 @@
 .input_wrapper{
     position: relative;
     font-size: 14px;
-    padding-top: 20px;
-    width: 298px;
+    width: var(--width);
 
 }
 .placeholder{
     position: absolute;
     font-size: 14px;
-    left:12px;
-    top:calc(50% + 8px);
+    top:50%;
     transform: translateY(-50%);
     color: #19191988;
-    background: var(--clr-neutral-50);
     transition: 0.3s ease;
 }
 /*
@@ -51,9 +55,10 @@
 
 
 .input_wrapper.one .input{
-    background: none;
     border: 1px solid #19191955;
     padding: 15px 8px;
+    padding-top:20px;
+    padding-bottom:5px;
     transition: 0.3s ease;
 
 }
@@ -87,8 +92,7 @@
 .input_wrapper.one input:valid + .placeholder,
 .input_wrapper.one input:focus + .placeholder{
     font-size: 12px;
-    top:20px;
-    background: var(--clr-neutral-50);
+    top:25%;
     color: #35C9F2;
 
 }
@@ -97,19 +101,18 @@
 .input_wrapper.two input:focus + .placeholder{
     font-size: 12px;
     top:20px;
-    background: var(--clr-neutral-50);
     color: #D92B3A;
 
 }
 
 .input_wrapper.one .placeholder{
     padding:0 5px;
-    left: 14px;
+    left: 3px;
 }
 
 
 .input_wrapper.two .placeholder{
     padding:0 5px;
-    left: 14px;
+    left: 3px;
     color:#D92B3A;
 }
