--- a/components/navigation/navbar2.module.css
+++ b/components/navigation/navbar2.module.css
@@ -84,13 +84,6 @@
     transform: scale(1.25);
     transition: all 0.6s cubic-bezier(.25,.8,.25,1);
 }
-.nav_search_svg{
-    margin-right: 6px;
-
-}
-.nav_cart_svg{
-
-}
 .navbar_wrapper_scroll{
     position: fixed;
     top:48px;
@@ -176,10 +169,6 @@
     transform: scale(1.3);
     fill:#0AA1CC;
 }
-.search_wrapper:hover svg{
-    transform: scale(1.3);
-    fill:#2F8E0C;
-}
 .buy_now_wrapper{
     margin:0 auto;
     color:#ffffff !important;
@@ -258,3 +247,57 @@
     transform: translateX(calc(40px - 0.122525em));
     transition: transform 0.2s ease-in-out;
 }
+
+
+/*services portal dropdown menu*/
+
+.portal_dropdown_container{
+    position: absolute;
+    left:50%;
+    opacity:0;
+    display:none;
+    background-color:var(--clr-neutral-50);
+    transform:translateX(-50%);
+    transition: all 0.3s ease;
+}
+.portal_link:hover > .portal_dropdown_container{
+    opacity:1;
+    display:block;
+}
+.portal_link{
+    position:relative;
+}
+.portal_dropdown_ul{
+    list-style: none;
+    padding:14px 8px;
+    padding-bottom:4px;
+}
+.portal_dropdown_ul_li{
+    position:relative;
+    z-index:1;
+    color:var(--clr-neutral-800);
+    margin:0 !important;
+    margin-bottom:15px !important;
+    transition: all 0.3s ease;
+    border-bottom:1px solid var(--clr-neutral-250);
+}
+.portal_dropdown_ul_li::before{
+    z-index:-1;
+    position: absolute;
+    content: "";
+    left: 0;
+    top:-15px;
+    bottom:0;
+    right:100%;
+    transition:all 0.3s ease;
+    background-color:var(--clr-neutral-800);
+}
+.portal_dropdown_ul_li:hover{
+    color:var(--clr-neutral-50);
+}
+.portal_dropdown_ul_li:hover::before{
+    right:0;
+}
+
+
+
